# nupyprop

./: .gitattributes  .gitignore  HTC_instructions.txt  Plot.ipynb  README.md  README.rst  cont_e_loss.py  cross_section.py  data.py  dependencies.yml  energy_loss.py  etau_dist.py  file_organizer.py  geometry.py  geometry_py.py  main.py  makefile  my_interpolation.py  nupy.sh  nupyprop.sub  nupyprop_config.py  output_nu_tau_0km_ct18nlo_allm_stochastic_1e7.h5  output_nu_tau_0km_ct18nlo_allm_stochastic_1e8.h5  output_nu_tau_4km_ct18nlo_allm_stochastic_1e5.h5  output_nu_tau_4km_ct18nlo_allm_stochastic_1e6.h5  plot.py  propagate.f90  pyproject.toml  run.py  setup.cfg  setup.py  transport.py
.github/workflows/: conda-build-publish.yml  conda-build-test-publish.yml  publish-to-test-pypi-linux.yml  publish-to-test-pypi-macos.yml  publish-to-test-pypi.yml  pypi-build-test-archive.yml  pypi-build-test-publish.yml  pypi-linux-build-test-archive.yml  pypi-publish.yml
Better_Plots/: Plots.py  new_plots.py  output_nu_tau_4km_ct18nlo_allm_stochastic_1e5.h5  output_nu_tau_4km_ct18nlo_allm_stochastic_1e6.h5  python_fortran_compare_nr  python_fortran_compare_wr  save_output_nu_tau_4km_ct18nlo_allm_stochastic_1e5.h5
Plots/: Plots.py  output_nu_tau_4km_ct18nlo_allm_stochastic_1e6.h5
datas/: output_nu_tau_1km_ct18nlo_allm_stochastic_1e7.h5  output_nu_tau_4km_ct18nlo_allm_stochastic_1e7.h5  output_nu_taus_0km_ct18nlo_allm_stochastic_1e7.h5
doc/: search.html
doc/lists/: modules.html
doc/module/: constants.html  geometry.html  interpolation.html  run.html  transport.html
doc/proc/: cd2distd.html  em_cont_part.html  find_y.html  idecay.html  int_alpha.html  int_beta.html  int_length_lep.html  interaction_type_nu.html  interp_linear_internal.html  premdensity.html  propagate_lep_water.html  propagate_nu.html  random_no.html  test_format.html  test_y.html
doc/src/: propagate.f90
docs/: requirements.txt
docs/source/: conf.py  cross-section.rst  data.rst  development.rst  energy-loss.rst  geometry.rst  index.rst  index_old.rst  installation.rst  main.rst  propagate.rst  run.rst
examples/: Plot.ipynb  output_nu_tau_4km_ct18nlo_allm_stochastic_1e8.h5
plotting_tutorial/: README.rst  neutrino_cross_sections.ipynb  output_nu_tau_0km_ct18nlo_allm_stochastic_1e8.h5  output_nu_taus_0km_ct18nlo_allm_stochastic_1e8.h5  output_plots.ipynb  plot.py
plotting_tutorial/data/: output_nu_tau_4km_ct18nlo_allm_stochastic_1e8.h5
recipe/: conda_build_config.yaml  meta.yaml
src/nupyprop/: #geometry.py#  #propagate.f90#  __init__.py  __main__.py  ak135_density.txt  chord_len.py  constants.py  cross_section.py  data.py  energy_loss.py  file_test.py  geometry.py  geometry_v2.py  main.py  prop_doc.md  propagate.f90  propagation.py  run.py  transport.py  try.py
src/nupyprop/datafiles/: ak135_density.txt  polarization_data.txt
src/nupyprop/doc/: index.html
src/nupyprop/doc/lists/: procedures.html
src/nupyprop/doc/module/: otmod.html  test.html
src/nupyprop/doc/proc/: densityatx.html  distnu.html  get_frac.html  get_threads.html  int_length_nu.html  int_xc_lep.html  int_xc_nu.html  interaction_type_lep.html  interp_linear_pt.html  interpol.html  p_exit_w.html  propagate_lep_rock.html  regen.html  run_stat_single.html  searchsorted.html  single_stat.html  tau_thru_layers.html  test_write.html
src/nupyprop/doc/sourcefile/: propagate.f90.html
src/nupyprop/doc/tipuesearch/: tipuesearch_content.js
src/nupyprop/models/: beta_muon_pn_bdhm_rock.ecsv  beta_muon_pn_bdhm_water.ecsv  beta_muon_pn_ckmt_rock.ecsv  beta_muon_pn_ckmt_water.ecsv  beta_tau_pn_bdhm_rock.ecsv  beta_tau_pn_bdhm_water.ecsv  beta_tau_pn_ckmt_rock.ecsv  beta_tau_pn_ckmt_water.ecsv  ixc_anti_neutrino_ctw.ecsv  ixc_muon_pn_bdhm_rock.ecsv  ixc_muon_pn_bdhm_water.ecsv  ixc_muon_pn_ckmt_rock.ecsv  ixc_muon_pn_ckmt_water.ecsv  ixc_neutrino_bsm.ecsv  ixc_neutrino_ctw.ecsv  ixc_tau_pn_bdhm_rock.ecsv  ixc_tau_pn_bdhm_water.ecsv  ixc_tau_pn_ckmt_rock.ecsv  ixc_tau_pn_ckmt_water.ecsv  models.py  xc_anti_neutrino_ctw.ecsv  xc_muon_pn_bdhm_rock.ecsv  xc_muon_pn_bdhm_water.ecsv  xc_muon_pn_ckmt_rock.ecsv  xc_muon_pn_ckmt_water.ecsv  xc_neutrino_bsm.ecsv  xc_neutrino_ctw.ecsv  xc_tau_pn_bdhm_rock.ecsv  xc_tau_pn_bdhm_water.ecsv  xc_tau_pn_ckmt_rock.ecsv  xc_tau_pn_ckmt_water.ecsv
src/nupyprop/scripts/: run.py
src/nupyprop/tests/: test_geometry.py
tutorial/: README.rst  charged_lepton_energy_loss.ipynb  output_plots.ipynb
tutorial/data/: output_nu_tau_4km_ct18nlo_allm_prem_stochastic_1e7.h5  output_nu_tau_4km_ct18nlo_bdhm_stochastic_1e8.h5
