[metadata]
name = nupyprop
authors = Sameer Patel, Mary Hall Reno
author_email =
  sameer-patel-1@uiowa.edu
  mary-hall-reno@uiowa.edu
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = A simulator for nutrino propagation through the earth.
keywords =
  NASA
  neutrinos
  Simulation
license = MIT
maintainer = Sameer Patel
maintainer_email = sameer-patel-1@uiowa.edu
url = https://heasarc.gsfc.nasa.gov/docs/nuSpaceSim/

[options]
zip_safe = False
ext_package = nupyprop
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
  importlib_resources
  matplotlib
  numpy
  pandas
  scipy
  sympy
  tables

[options.packages.find]
where = src

[options.package_data]
nupyprop.datafiles = lookup_tables.h5

[options.entry_points]
console_scripts =
  nupyprop = nupyprop.scripts.run:main

[bdist_wheel]
universal = 0

[tox:tox]
envlist = py{36,37,38,39}
isolated_build = True

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}
