[metadata]
name = nupyprop
author = Sameer Patel, Mary Hall Reno
author_email = sameer-patel-1@uiowa.edu, mary-hall-reno@uiowa.edu
classifiers =
    Intended Audience :: Science/Research
    Programming Language :: Fortran
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = A simulator for neutrino propagation through the earth.
keywords =
  NASA
  neutrinos
  Simulation
license = MIT
long_description_content_type = text/markdown
long_description = file: README.md
maintainer = Sameer Patel
maintainer_email = sameer-patel-1@uiowa.edu
url = https://heasarc.gsfc.nasa.gov/docs/nuSpaceSim/

[options]
zip_safe = False
ext_package = nupyprop
packages = find:
package_dir =
    = src
include_package_data = True
install_requires =
  astropy
  h5py
  importlib_resources
  matplotlib
  numpy
  scipy
  sympy

[options.packages.find]
where = src

[options.package_data]
nupyprop.datafiles = lookup_tables.h5

[options.entry_points]
console_scripts =
  nupyprop = nupyprop.scripts.run:main

[bdist_wheel]
universal = 0

[tox:tox]
envlist = py{37,38,39}
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
deps =
    pytest
commands =
    pytest {posargs:--verbose}
